--- a/Desafios/desafio 12/index.html
+++ b/Desafios/desafio 12/index.html
@@ -98,7 +98,7 @@
     </section>
 
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a> e reproduzido <br>por <a href="https://github.com/samuelnogueyra">Samuel Nogueira</a></p>
+        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a> e reproduzido <br>por <a href="https://github.com/samuelnogueyra" target="_blank">Samuel Nogueira</a></p>
     </footer>
 </body>
 </html>
