Ex 007,008,009 e 010 sobre Flexbox

--- a/exercicios/Modulo 1/ex027/flex009/index.html
+++ b/exercicios/Modulo 1/ex027/flex009/index.html
@@ -8,23 +8,26 @@
         #container{
             background-color: aqua;
             display: flex;
+            flex-flow: row wrap;
         }
 
         .itens{
             background-color: gray;
-            border: 1px solid black;
-            flex: auto;
             text-align: center;
+            border: 1px solid black;
+            flex-basis: 100px;
         }
     </style>
 </head>
 <body>
     <div id="container">
-        <div class="itens">A</div>
+        <div class="itens">Exemplo maior A</div>
         <div class="itens">B</div>
-        <div class="itens">C</div>
+        <div class="itens">exemplo maior ainda, para demonstração C</div>
         <div class="itens">D</div>
         <div class="itens">E</div>
+        <div class="itens">F</div>
+        <div class="itens">G</div>
     </div>
     
 </body>
